--- a/Index.html
+++ b/Index.html
@@ -6,6 +6,11 @@
     <title>Document</title>
   </head>
   <body>
+    <div class="container">
+      <div class="box-switcher">
+        <div class="switch"></div>
+      </div>
+    </div>
     <style></style>
   </body>
 </html>
