--- a/Index.html
+++ b/Index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="output.css" />
     <title>Document</title>
   </head>
   <body>
@@ -11,15 +12,16 @@
         <div class="switch">
           <div class="header-nav">
             <ul class="header-nav-list">
-              <li class="header-nav-list-container"><a href=""></a></li>
-              <li class="header-nav-list-container"><a href=""></a></li>
-              <li class="header-nav-list-container"><a href=""></a></li>
-              <li class="header-nav-list-container"><a href=""></a></li>
+              <li class="header-nav-list-container"><a href="">twitter</a></li>
+              <li class="header-nav-list-container"><a href="">facebook</a></li>
+              <li class="header-nav-list-container"><a href="">snapchat</a></li>
+              <li class="header-nav-list-container">
+                <a href="">instagram</a>
+              </li>
             </ul>
           </div>
         </div>
       </div>
     </div>
-    <style></style>
   </body>
 </html>
