--- a/Index.html
+++ b/Index.html
@@ -3,6 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.css"
+    />
     <link rel="stylesheet" href="output.css" />
     <title>Document</title>
   </head>
@@ -12,11 +16,11 @@
         <div class="switch">
           <div class="header-nav">
             <ul class="header-nav-list">
-              <li class="header-nav-list-container"><a href="">twitter</a></li>
-              <li class="header-nav-list-container"><a href="">facebook</a></li>
-              <li class="header-nav-list-container"><a href="">snapchat</a></li>
-              <li class="header-nav-list-container">
-                <a href="">instagram</a>
+              <li><a class="header-nav-list-container" href="">twitter</a></li>
+              <li><a class="header-nav-list-container" href="">facebook</a></li>
+              <li><a class="header-nav-list-container" href="">snapchat</a></li>
+              <li>
+                <a class="header-nav-list-container" href="">instagram</a>
               </li>
             </ul>
           </div>
