--- a/Index.html
+++ b/Index.html
@@ -16,10 +16,10 @@
       </div>
       <div class="header-nav">
         <ul class="header-nav-list">
-          <li><a class="header-nav-list-container" href="">twitter</a></li>
-          <li><a class="header-nav-list-container" href="">facebook</a></li>
-          <li><a class="header-nav-list-container" href="">snapchat</a></li>
-          <li><a class="header-nav-list-container" href="">instagram</a></li>
+          <li><a class="header-nav-list-container" href="">My GitHub</a></li>
+          <li><a class="header-nav-list-container" href="">My Facebook</a></li>
+          <li><a class="header-nav-list-container" href="">My linkedin</a></li>
+          <li><a class="header-nav-list-container" href="">My Insta</a></li>
         </ul>
     </div>
 
