--- a/Index.html
+++ b/Index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  
+
     <link rel="stylesheet" href="output.css" />
     <title>Document</title>
   </head>
@@ -11,9 +11,12 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 
     <div class="container">
-      <div class="box-switch">
-        <div class="switch"></div>
+      <div class="switch-container">
+        <div class="box-switch">
+          <div class="switch"></div>
+        </div>
       </div>
+
       <div class="header-nav">
         <ul class="header-nav-list">
           <li><a class="header-nav-list-container" href="">My GitHub</a></li>
@@ -21,6 +24,7 @@
           <li><a class="header-nav-list-container" href="">My linkedin</a></li>
           <li><a class="header-nav-list-container" href="">My Insta</a></li>
         </ul>
+      </div>
     </div>
 
     <script>
